@@ -1,3 +1,8 @@
+2005-05-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Applied patch #1196561 from Daniel South to remove
+	the Tk 8.3 compatability code now that we require Tk 8.4.
+
 2005-05-04  Kevin Kenny  <kennykb@acm.org>
 
 	* tkchat.tcl:  Corrected an interaction between the whiteboard
